src/test/deca/codegen/valid/sansObjet/OperationAssign2.deca
/* Description:
    Tester une operation d'assignement

    Historique:
      cree le 16/01/2020
    Sortie attendu:
    ok

*/



{
  int x = 0;
  int a;
  x = (a = (a = ( a = ( a = 5 ))));
  if (x == 5 )
  {
    println("ok");
  } else {
    println("erreur");
  }
}
