src/test/deca/codegen/invalid/OperationSurVarNonInit8.deca
/* Description:
    Tester des opérations booleanne avec des variables non initialisée

    Historique:
      cree le 16/01/2020
    Sortie attendu:


*/
{
	int x;
  boolean a =  (5 == x);
}
